--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <!-- BootStrap Icon -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
      <!-- Normal CSS -->
-     <link rel="stylesheet" href="/SearchBar/style.css">
+     <link rel="stylesheet" href="style.css">
 </head>
 <body>
      <div class="main">
@@ -100,6 +100,6 @@
           <div id="news-container"></div>
      </div>
 
-     <script src="/SearchBar/script.js"></script>
+     <script src="script.js"></script>
 </body>
 </html>
