Title: Change page title to "Search Cub"
This commit changes the title of the page from "Search Bar" to "Search Cub".

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Search Bar</title>
+     <title>Search Cub</title>
      <!-- BootStrap Icon -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
      <!-- Normal CSS -->
@@ -16,7 +16,7 @@
                <div class="img"><i class="bi bi-grid-3x3-gap"></i></div>
 
                <div class="name">
-                    <img class="img" src="https://th.bing.com/th/id/OIP.2ddcOTqkLqfCeaLwllUy9gHaHa?w=156&h=180&c=7&r=0&o=5&pid=1.7" alt="."> Microsoft Start
+                    <img class="img" src="https://th.bing.com/th/id/OIP.2ddcOTqkLqfCeaLwllUy9gHaHa?w=156&h=180&c=7&r=0&o=5&pid=1.7" alt=".">Search Cub
                </div>
           </div>
 
