Add search functionality to news articles; style search result container
The changes include:
- adding a search bar to the page
- fetching and displaying news articles based on user input
- styling the search result container and its elements

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           </div>
 
           <div class="box">
-               <div class="img left">
-                    <i class="bi bi-search"  ></i>
+               <div class="img left searchh">
+                    <i class="bi bi-search"></i>
                </div>
                <div>
                     <input type="text" placeholder="Search the Web" id="inputs">
@@ -98,6 +98,12 @@
      
      <div class="newssss">
           <div id="news-container"></div>
+     </div>
+
+     <div class="searchResult">
+          <div id="searchResult-container">
+               <div id="searchResult-Each"></div>
+          </div>
      </div>
 
      <script src="script.js"></script>
