--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
           <div class="box">
                <div class="img left searchh">
-                    <i class="bi bi-search"></i>
+                    <i class="bi bi-search">Q</i>
                </div>
                <div>
                     <input type="text" placeholder="Search the Web" id="inputs">
@@ -101,9 +101,15 @@
      </div>
 
      <div class="searchResult">
-          <div id="searchResult-container">
-               <div id="searchResult-Each"></div>
+          <div class="searchResult-Eachs">
+               <div class="mm">Picture</div>
+               <div class="mm">Name</div>
+               <div class="mm">Club</div>
+               <div class="mm">Jersey</div>
+               <div class="mm">Nationality</div>
           </div>
+          <div id="searchResult-container"></div>
+          <div class="close">X</div>
      </div>
 
      <script src="script.js"></script>
