"Removed text 'Q' from search icon, refactored search event listener and added focus event listener to search input"

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
           <div class="box">
                <div class="img left searchh">
-                    <i class="bi bi-search">Q</i>
+                    <i class="bi bi-search"></i>
                </div>
                <div>
                     <input type="text" placeholder="Search the Web" id="inputs">
